Add a toolbar block to the base template
The design on the modeling application calls for a left-aligned toolbar
in the header. The "search" sections of the header are all
right-aligned, necessitating the creation of a new block.

--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -27,6 +27,12 @@
     }
 }
 
+.toolbar-wrapper {
+    position: absolute;
+    top: 60px;
+    display: inline-block;
+}
+
 .search-wrapper {
     position: absolute;
     right: 15px;
