--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -137,6 +137,11 @@
         </div>
         {% endblock logo %}
 
+        <div class="toolbar-wrapper">
+          {% block toolbar %}
+          {% endblock toolbar %}
+        </div>
+
         <div class="search-wrapper">
           {% block search %}
           {% endblock search %}
