--- a/opentreemap/treemap/templates/treemap/partials/map_feature_popup.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_feature_popup.html
@@ -13,9 +13,9 @@
     <a href="{% url 'map_feature_detail' instance_url_name=request.instance.url_name feature_id=feature.pk %}"
        class="btn btn-sm btn-secondary">{% trans "View All Details" %}</a>
 
-    {% if feature.is_plot %}
+    {% if feature.is_plot or feature.is_editable %}
     <a disabled="disabled"
-       data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+       data-always-enable="{{ last_effective_instance_user|map_feature_is_writable:feature }}"
        data-disabled-title="{% trans "Editing a tree's details is not available to all users" %}"
        data-href="{% url 'map_feature_detail_edit' instance_url_name=request.instance.url_name feature_id=feature.pk edit='edit' %}"
        class="btn btn-sm btn-info">{% trans "Edit Details" %}</a>
