--- a/opentreemap/treemap/css/sass/partials/pages/_modeling.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_modeling.scss
@@ -73,23 +73,33 @@
             }
         }
     }
-    .content.map {
-        top: 145px;
-        bottom: 0;
 
-        #sidebar-switcher {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 350px;
-            height: 40px;
+    #view-switcher {
+        height: 40px;
+
+        .view-priorities-button.active {
+            font-weight: bold;
         }
+
+        #scenario-buttons {
+            display: inline;
+            padding-left: 5px;
+            border-left: 1px solid gray;
+
+            .active {
+                font-weight: bold;
+            }
+        }
+    }
+
+    .content.map {
+        top: 185px;
+        bottom: 0;
 
         .sidebar {
             right: auto;
             left: 0;
             border: none;
-            margin-top: 40px;
 
             .templates {
                 height: 50px;
@@ -167,12 +177,7 @@
             > .panel-group {
                 border-radius: 0;
                 border: none;
-                top: 50px;
                 z-index: 9;
-                bottom: 0;
-                position: absolute;
-                height: auto;
-                width: 100%;
 
                 .panel-heading {
                     border-radius: 0;
