--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -101,20 +101,20 @@
       <div class="row">
         <div class="col-md-6">
           <h4>{% trans "Detail Filters" %}</h4>
-          {% for json in request.instance.advanced_search_fields.standard %}
+          {% for json in advanced_search_fields.standard %}
             {% search from json for request.user in request.instance withtemplate "treemap/field/search.html" %}
           {% endfor %}
         </div>
         <div class="col-md-3" id="display-filters" data-search-type="IN"
             data-search-identifier="mapFeature.feature_type">
           <h4>{% trans "Display Filters" %}</h4>
-          {% for field in request.instance.advanced_search_fields.display %}
+          {% for field in advanced_search_fields.display %}
             {% include "treemap/partials/display_filters.html" %}
           {% endfor %}
         </div>
         <div class="col-md-3" id="missing-data">
           <h4>{% trans "Missing Data" %}</h4>
-          {% for json in request.instance.advanced_search_fields.missing %}
+          {% for json in advanced_search_fields.missing %}
             {% search from json for request.user in request.instance withtemplate "treemap/field/search.html" %}
           {% endfor %}
         </div>
