--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -268,6 +268,7 @@
 var mapFeatureOptions = {
     config: otm.settings,
     startInEditMode: {% if editmode %}true{% else %}false{% endif %},
+    hidePointMarker: {% if feature.polygon %}true{% else %}false{% endif %},
     delete: '#delete-plot-or-tree',
     deleteConfirm: '#delete-confirm',
     deleteCancel: '#delete-cancel',
