Load plotDelete in concrete not generic type files
In order to allow plot to load mapFeatureDelete differently than other
files, we need to have plot.js and resource.js load plotDelete (soon to
be renamed) differently, rather than have mapFeature.js always load
mapFeatureDelete the same way, because plot.js has no way to pass
overrides back up to mapFeature.js before it initializes mapFeatureDelete.

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -269,10 +269,12 @@ var mapFeatureOptions = {
     config: otm.settings,
     startInEditMode: {% if editmode %}true{% else %}false{% endif %},
     hidePointMarker: {% if feature.polygon %}true{% else %}false{% endif %},
-    delete: '#delete-plot-or-tree',
-    deleteConfirm: '#delete-confirm',
-    deleteCancel: '#delete-cancel',
-    deleteConfirmationBox: '#delete-confirmation-box',
+    deleteControls: {
+        delete: '#delete-plot-or-tree',
+        deleteConfirm: '#delete-confirm',
+        deleteCancel: '#delete-cancel',
+        deleteConfirmationBox: '#delete-confirmation-box',
+    },
     featureId: {{ feature.id }},
     sidebar: '#sidebar',
     form: '#map-feature-form',
