--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -135,6 +135,8 @@
           addTreeControls: '#add-tree-controls',
           treeSection: '#tree-details',
           inlineEditForm: mapFeatureOptions.inlineEditForm,
+          deleteControls: mapFeatureOptions.deleteControls,
+          config: mapFeatureOptions.config,
           form: mapFeature.inlineEditForm,
           typeaheads: [{
               name: "species",
