--- a/opentreemap/treemap/css/sass/partials/pages/_scenarios.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_scenarios.scss
@@ -1,30 +1,51 @@
 #sidebar-scenarios {
-
-    > .shadow {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #fff;
-        opacity: 0.5;
-        z-index: 50;
-    }
+    background: #f3f3f3;
+    padding-bottom: 75px;
 
     > .sidebar-inner {
 
         > h3 {
             padding: 18px 16px 16px;
             margin: 0;
-            font-size: 2.1rem;
+            font-size: 1.9rem;
+            font-weight: 500;
             background: $secondary-color;
             color: white;
+            position: relative;
+            cursor: pointer;
 
             &:before {
                 content: counter(steps) ". ";
                 counter-increment: steps;
                 font-size: 1.6rem;
                 margin-right: 5px;
+            }
+
+            &:after {
+                content: '\e970';
+                font-family: "fontello";
+                font-style: normal;
+                font-weight: normal;
+                speak: none;
+                display: inline-block;
+                text-decoration: inherit;
+                width: 1em;
+                margin-right: .2em;
+                text-align: center;
+                font-variant: normal;
+                text-transform: none;
+                line-height: 1em;
+                margin-left: .2em;
+                position: absolute;
+                right: 15px;
+                top: 20px;
+            }
+
+            &.collapsed {
+                opacity: .8;
+                &:after {
+                    content: '\e972';
+                }
             }
         }
 
@@ -39,135 +60,144 @@
             }
         }
 
-        .add-step-container {
-            position: absolute;
-            overflow: hidden;
-            overflow-y: auto;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            top: 55px;
+        @include checkboxes;
+    }
+
+    .sidebar-container {
+        padding: 0 20px;
+        background: #fff;
+
+        .content-header {
+            margin: 0 -20px;
+            background: $light-gray-color;
+            color: darken($subtext-color, 10%);
+            padding: 8px 16px;
+            font-size: 1.2rem;
+            font-weight: 700;
+
+            a {
+                border-bottom: 1px dotted;
+            }
         }
-        .add-step {
-            .add-step-content {
-                padding: 20px;
-                position: absolute;
-                // Height of the sidebar footer.
-                bottom: 200px;
-                top: 0;
-                overflow-y: auto;
-                left: 0;
-                right: 0;
 
-                .content-header {
-                    margin: 0 -20px;
-                    background: $light-gray-color;
-                    color: darken($subtext-color, 10%);
-                    padding: 8px 16px;
-                    font-size: 1.2rem;
-                    font-weight: 700;
+        .content-empty {
+            padding: 30px 0 30px;
+            margin: 0;
 
-                    &:first-of-type {
-                        margin-top: -20px;
-                    }
+            a {
+                text-decoration: underline;
+                font-weight: bold;
+                font-style: italic;
+            }
+        }
 
-                    a {
-                        border-bottom: 1px dotted;
-                    }
-                }
-                .content-empty {
-                    padding: 15px 0 20px;
-                    margin: 0;
+        .content-row {
+            border-bottom: 1px solid $light-gray-color;
+            margin: 0 -20px;
+            padding: 15px 20px 25px;
+
+            > .row {
+                margin-left: -10px;
+                margin-right: -10px;
+
+                > div {
+                    padding-left: 5px;
+                    padding-right: 5px;
 
                     a {
-                        text-decoration: underline;
-                        font-weight: bold;
-                        font-style: italic;
+                        float: right;
+                        padding: 6px 0;
+                        margin-top: 24px;
+                        text-align: right;
                     }
-                }
-                .content-row {
-                    border-bottom: 1px solid $light-gray-color;
-                    margin: 0 -20px;
-                    padding: 6px 20px 14px;
 
-                    > .row {
-                        margin-left: -10px;
-                        margin-right: -10px;
+                    label {
+                        font-size: 1.1rem;
+                        font-weight: 700;
 
-                        > div {
-                            padding-left: 5px;
-                            padding-right: 5px;
-
-                            a {
-                                float: right;
-                                padding: 6px 0;
-                                margin-top: 24px;
-                                text-align: right;
-                            }
-                            label {
-                                font-size: 1.1rem;
-                                font-weight: 700;
-
-                                > em {
-                                    margin-left: 5px;
-                                    color: $main-text-color;
-                                    font-style: normal;
-                                }
-                            }
-                            input.form-control {
-                                font-size: 1.2rem;
-                            }
+                        > em {
+                            margin-left: 5px;
+                            color: $main-text-color;
+                            font-style: normal;
                         }
                     }
-                }
-
-                .collapsible-header {
-                    font-size: 1.2rem;
-                    padding: 10px;
-                }
-
-                @include checkboxes;
-            }
-            .add-step-footer {
-                margin: 0;
-                padding: 0 20px;
-                border-top: 1px solid $light-gray-color;
-                position: absolute;
-                bottom: 40px;
-                left: 0;
-                right: 0;
-
-                .counter {
-                    position: absolute;
-                    top: 18px;
-                    font-size: 1.4rem;
-                    left: 0;
-                    right: 0;
-                    text-align: center;
-                }
-                .pager {
-                    position: relative;
-                    margin: 13px 0;
-                }
-                .summary {
-                    font-size: 1em;
-
-                    .tree-count {
-                        font-weight: bold;
-                        color: $primary-color;
+                    
+                    input.form-control {
+                        font-size: 1.2rem;
                     }
                 }
-                .calculate {
-                    margin: 0 -20px 0;
+            }
 
-                    .btn {
-                        border-radius: 0;
-                    }
-                }
-                .footer-step-number:before {
-                    content: counter(steps);
+            .form-group {
+                margin-bottom: 0;
+            }
+        }
+
+        .collapsible-header {
+            font-size: 1.2rem;
+            padding: 10px;
+
+            > a {
+                display: block;
+            }
+        }
+    }
+
+    #tree-mortality-container {
+
+        .more-options {
+            font-size: 13px;
+            font-weight: 400;
+            text-decoration: underline;
+
+            &:before {
+                content: 'Less ';
+            }
+            
+            &.collapsed:before {
+                content: 'More ';
+            }
+        }
+
+        .more-options-content {
+            
+            label {
+                margin-top: 10px;
+            }
+
+            > .row {
+                margin-bottom: 10px;
+
+                &:last-child {
+                    margin-bottom: 0;
                 }
             }
+        }
+    }
+
+    #replanting-growth-container {
+        
+        .form-group {
+            margin-top: 5px;
+        }
+    }
+
+    #canopy-forecast-container .content-row > .row {
+        margin-bottom: 10px;
+    }
+
+    .sidebar-footer {
+        padding: 15px 20px;
+        position: fixed;
+        width: 350px;
+        bottom: 40px;
+        background-color: #fff;
+        box-shadow: 0 -6px 0 rgba(0, 0, 0, 0.15);
+        z-index: 10;
+        height: auto;
+
+        .btn {
+            border-radius: 50px;
         }
     }
 }
