Add comment disclaimer to all resources
connects #2172 on github

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -193,13 +193,19 @@
             {% endif %}
           </div>
 
-          {% if feature.is_plot %}
           <div id="comment_disclaimer">
             <p class="text-muted">
-              <em>The comment system does not serve as a way to report problems with a tree.</em>
+              <em>
+                {% if feature.is_plot %}
+                {% trans "The comment system does not serve as a way to report problems with a tree." %}
+                {% else %}
+                {% blocktrans with resource=term.resource %}
+                The comment system does not serve as a way to report problems with a {{ resource }}.
+                {% endblocktrans %}
+                {% endif %}
+              </em>
             </p>
           </div>
-          {% endif %}
 
         </div>
 
