--- a/opentreemap/treemap/css/sass/partials/pages/_modeling.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_modeling.scss
@@ -140,10 +140,14 @@
             }
         }
 
-        #scenario-buttons {
+        .scenario-button-container {
             padding-left: 10px;
             position: relative;
             white-space: nowrap;
+        }
+
+        #scenario-buttons {
+            display: inline-block;
 
             > .btn-group.js-scenario {
                 display: inline-block;
@@ -275,6 +279,32 @@
                     width: 100% !important;
                 }
             }
+            .scenario-trees-total {
+                width: 260px;
+                position: absolute;
+                bottom: 15px;
+                right: -285px;
+                background: white;
+                padding: 7px 12px 8px;
+                font-size: 1.4rem;
+                border-radius: 6px;
+                box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
+                z-index: 1;
+
+
+                p {
+                    color: darken($subtext-color, 10%);
+                    margin: 5px;
+                    font-weight: 600;
+                    font-size: 13px;
+
+                    > span {
+                        color: $primary-color;
+                        float: right;
+                        margin-left: 5px;
+                    }
+                }
+            }
         }
         .map {
             right: 0;
@@ -362,30 +392,6 @@
                         font-weight: 700;
                         color: $subtext-color;
                         margin: 0;
-                    }
-                }
-            }
-
-            .scenario-trees-total {
-                position: absolute;
-                bottom: 56px;
-                right: 16px;
-                background: white;
-                padding: 7px 12px 8px;
-                font-size: 1.4rem;
-                border-radius: 6px;
-                box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
-
-                p {
-                    color: darken($subtext-color, 10%);
-                    margin: 5px;
-                    font-weight: 600;
-                    font-size: 13px;
-
-                    span {
-                        color: $primary-color;
-                        float: right;
-                        margin-left: 20px;
                     }
                 }
             }
